View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023350 | Community | OCCT:DRAW | public | 2012-07-26 13:17 | 2012-11-16 13:17 |
Reporter | Pawel | Assigned To | Pawel | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.3 | ||||
Target Version | 6.5.4 | Fixed in Version | 6.5.4 | ||
Summary | 0023350: The null pointer is passed into 'strcmp' function. | ||||
Description | TestTopOpe_VarsTopo.cxx, lines: 101, 102, 103. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Corresponding git branch pushed. Please review. |
|
No remarks, please test |
|
Dear BugMaster, Branch CR23350 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regression: Not detected Improvements: Not detected Testing case: Not needed |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-07-26 13:17 | Pawel | New Issue | |
2012-07-26 13:17 | Pawel | Assigned To | => Pawel |
2012-07-26 13:19 | Pawel | Note Added: 0021161 | |
2012-07-26 13:19 | Pawel | Assigned To | Pawel => bugmaster |
2012-07-26 13:19 | Pawel | Status | new => resolved |
2012-07-27 07:32 | abv | Note Added: 0021169 | |
2012-07-27 07:32 | abv | Status | resolved => reviewed |
2012-07-31 10:07 | apn | Note Added: 0021189 | |
2012-07-31 10:08 | apn | Test case number | => Not needed |
2012-07-31 10:08 | apn | Status | reviewed => tested |
2012-08-06 16:35 | Pawel | Changeset attached | => occt master 3b4c36f5 |
2012-08-06 16:35 | Pawel | Assigned To | bugmaster => Pawel |
2012-08-06 16:35 | Pawel | Status | tested => verified |
2012-08-06 16:35 | Pawel | Resolution | open => fixed |
2012-11-16 13:14 | bugmaster | Fixed in Version | => 6.5.4 |
2012-11-16 13:17 | bugmaster | Status | verified => closed |