0023350: The null pointer is passed into 'strcmp' function.

The method returns if it gets a NULL pointer.